rbac/templates/namespace-admission-vap.yaml
# Copyright 2025 Nadrama Pty Ltd
# SPDX-License-Identifier: Apache-2.0
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: system-deny-namespace-vap
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - operations: ["CREATE", "UPDATE", "DELETE", "CONNECT"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["*/*"]
  validations:
    # do not apply this policy if...
    - expression: >
        !(request.userInfo.groups.exists(g, g.startsWith("nadrama:"))) ||
        (
          request.userInfo.groups.exists(g, g == "nadrama:admins") && (
            (request.namespace.startsWith('system-') && request.kind.kind == "Pod" && request.operation == "DELETE") ||
            (request.kind.kind == "Namespace" && !(request.name.startsWith('system-') || request.name.startsWith('kube-'))) ||
            (request.kind.kind == "PersistentVolume" && !(request.name.startsWith('system-') || request.name.startsWith('kube-'))) ||
            (request.kind.kind == "StorageClass" && !(request.name.startsWith('system-') || request.name.startsWith('kube-')))
          )
        )
      message: "Access to system-/kube- prefixed resources is restricted. See https://nadrama.com/docs/limits"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: system-deny-namespace-vapb
spec:
  policyName: system-deny-namespace-vap
  validationActions: ["Deny", "Audit"]
  matchResources:
    namespaceSelector: {}
